Fix: wrong position of <pre> on Firefox

--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -39,7 +39,7 @@
 		}
 
 		.markdown-section pre>code {
-			padding: 0 !important;
+			padding: 2.2em 5px !important;
 		}
 	</style>
 </head>
@@ -147,7 +147,7 @@
 			`//cdn.jsdelivr.net/npm/`,
 			`//quantil.jsdelivr.net/npm/`,
 			`//originfastly.jsdelivr.net/npm/`,
-			`//s4.zstatic.net/npm/`,
+			`//s4.zstatic.net/npm/`
 		];
 		let rnk = {};
 		for (let i of pattern_old) if(pattern_old[i]) rnk[pattern_old[i]] = 998244353;
