Upd: pour some special effects into index.html

--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@
 			color: white;
 		}
 		#moemoemoemoemoe{
+			transition: all 1s;
+			opacity: 34%; 
 			position: absolute;
 			bottom: 0;
 			width: 100%;
-			height: 10vh;
 			text-align: center;
 			color: white;
+		}
+		#moemoemoemoemoe:hover {
+			opacity: 50%;
 		}
 		#moemoemoemoemoe>a {color: pink;}
 	</style>
