Fix: assets path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Edwin Lau's own site. ">
 	<link rel="favicon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
 	<style>
 		* {
 			padding: 0;
